# skill-knowledge-graph

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  paper.md  pyproject.toml
docs/: integration.md
eval/: RATING_WORKFLOW.md  baseline_a_large.py  baseline_a_runner.py  baseline_bcd_runner.py  baseline_runner.py  bootstrap.py  corpus_builder.py  corpus_builder_large.py  corpus_large.jsonl  h1_stats.py  rating_agreement.py  rating_review_cli.py  rating_runner.py  seeded_runner.py  seeded_split.py  skg_large_estimate.py  vector_stage_runner.py
figures/: fig1_architecture.dot
nodes/doc-update/: Cargo.toml  manifest.yaml
nodes/doc-update/src/: main.rs
nodes/git-summary/: Cargo.toml  manifest.yaml
nodes/git-summary/src/: main.rs
nodes/reviewer-ping-draft/: Cargo.toml  manifest.yaml
nodes/reviewer-ping-draft/src/: main.rs
scripts/: render_attack_chart.py  render_hero.py  render_token_chart.py
skg/: __init__.py  attestation.py  cap_to_imports.py  cli.py  cli_vendors.py  effects.py  graph.py  handle_table.py  host_adapters.py  host_imports.py  index.py  mcp_server.py  node.py  policy.py  router.py  store.py  synthesis.py  verifier.py  wasi_minimal.py  wasmtime_launcher.py
skg/baselines/: __init__.py  declared.py  flat_library.py  flow_registry.py  semantic_cache.py
skg/integrations/: agent_proxy.py
tests/: test_adversarial_corpus.py  test_baseline_bcd_runner.py  test_baseline_declared.py  test_baseline_flat_library.py  test_baseline_flow_registry.py  test_baseline_semantic_cache.py  test_bootstrap.py  test_cap_to_imports.py  test_cli.py  test_confused_deputy.py  test_containment_matrix.py  test_corpus_builder_large.py  test_full_baseline_matrix.py  test_handle_table.py  test_host_adapters.py  test_host_adapters_full.py  test_local_wasi.py  test_mcp_server.py  test_node.py  test_phase3d_manifest_scopes.py  test_policy.py  test_rating_agreement.py  test_rating_runner.py  test_router.py  test_scoped_enforcement.py  test_security.py  test_seeded_split.py  test_store.py  test_vector_stage_runner.py  test_verifier.py  test_wasmtime.py
