[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-knowledge-graph"
version = "0.1.0"
description = "Capability-governed procedure reuse for low-cost LLM agents"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Bongani Dube" }]
requires-python = ">=3.11"
keywords = ["llm", "agents", "capability", "procedure-reuse", "wasm", "wasi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "wasmtime>=40.0",
    "qdrant-client>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
skg = "skg.cli:main"

[project.urls]
Homepage = "https://github.com/bdube83/skill-knowledge-graph"
Repository = "https://github.com/bdube83/skill-knowledge-graph"
Issues = "https://github.com/bdube83/skill-knowledge-graph/issues"

[tool.hatch.build.targets.wheel]
packages = ["skg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
